# ezmsg-learn

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish-ezmsg-learn.yml  python-publish.yml  python-tests.yml
docs/source/: conf.py  index.rst
docs/source/_templates/autosummary/: module.rst
docs/source/api/: index.rst
docs/source/guides/: array_api.rst  classification.rst
src/ezmsg/learn/: incremental_decomp.py  util.py
src/ezmsg/learn/assess/: __init__.py  base.py  error_rate.py
src/ezmsg/learn/collection/: sample_adapt_regressor.py
src/ezmsg/learn/dim_reduce/: adaptive_decomp.py  incremental_decomp.py
src/ezmsg/learn/linear_model/: adaptive_linear_regressor.py  linear_regressor.py  sgd.py  slda.py
src/ezmsg/learn/model/: cca.py  mlp.py  refit_kalman.py  rnn.py  (+1 more)
tests/benchmark/: bench_lrr.py
tests/dim_reduce/: test_adaptive_decomp.py  test_incremental_decomp.py
tests/integration/: conftest.py  test_mlp_system.py  test_refit_kalman_system.py  test_rnn_system.py  test_sklearn_system.py  test_torch_system.py  test_transformer_system.py
tests/linear_model/: test_adaptive_linear_regressor.py  test_incremental_decomp.py  test_linear_regressor.py  test_sgd.py  test_slda.py
tests/nlin_model/: test_mlp.py
tests/unit/: test_adaptive_linear_regressor.py  test_cca.py  test_flatten.py  test_linear_regressor.py  test_mlp.py  test_mlp_old.py  test_refit_kalman.py  test_rnn.py  test_sample_adapt_regressor.py  test_seqseqsampler.py  test_sgd.py  test_sklearn.py  test_slda.py  test_ssr.py  test_torch.py  test_transformer.py
(+16 files in other folders)
