[project]
name = "ezmsg-learn"
description = "ezmsg namespace package for machine learning"
readme = "README.md"
authors = [
    { name = "Chadwick Boulay", email = "chadwick.boulay@gmail.com" }
]
license = "MIT"
requires-python = ">=3.10.15"
dynamic = ["version"]
dependencies = [
    "ezmsg-sigproc",
    "river>=0.22.0",
    "scikit-learn>=1.6.0",
    "torch>=2.6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/ezmsg/learn/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ezmsg"]

[tool.uv.sources]
ezmsg-sigproc = { git = "https://github.com/ezmsg-org/ezmsg-sigproc.git", branch = "70-use-protocols-for-axisarray-transformers" }
